clusters/dev/keycloak/keycloak-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: keycloak
  namespace: keycloak
spec:
  hosts:
  - 40.76.133.153
  gateways:
  - keycloak-gateway
  http:
  - match:
    - uri:
        prefix: /keycloak
    route:
    - destination:
        host: keycloak.keycloak.svc.cluster.local
        port:
          number: 8080
